--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
     "babel-plugin-add-module-exports": "^1.0.4",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "build": "^0.1.4",
     "cloudinary": "^1.34.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -32,6 +33,7 @@
     "multi-part": "^4.0.0",
     "multipart": "^0.1.5",
     "nodemailer": "^6.9.1",
+    "nodemon": "^2.0.20",
     "npm": "^9.4.2"
   }
 }
