--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,15 @@
 {
-    "version": 2,
-    "builds": [
-      {
-          "src": "*.js",
-          "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/api/.*",
-        "methods": ["GET", "POST", "PUT", "DELETE"],
-        "dest": "app.js"
-      }
-    ],
-    "env": {
-      "MONGO_DB": "mongodb+srv://crud:crud@cluster0.bsgrjui.mongodb.net/register?retryWrites=true&w=majority"
-    }
-  }
+  "version": 2,
+  "builds": [
+   {
+       "src": "./index.js",
+       "use": "@vercel/node"
+   }
+  ],
+  "routes": [
+   {
+       "src": "/(.*)",
+       "dest": "/"
+   }
+  ]
+}
